# carpo_rs

./: .gitignore  Cargo.toml  readme.md
html/: auto_complete.css  auto_complete.tis  index.html  index.tis  stylesheet.css
src/: arch.rs  files.rs  gui.rs  lib.rs  main.rs  stylesheet.css  tags.rs  terminals.rs  util.rs
tests/: arch.rs  mod.rs  simple.rs  tags.rs  util.rs
tests/learning/: dirs.rs  mod.rs  tempfile.rs
