[package]
name = "carpo"
version = "0.2.4"
authors = ["Larry Hsiao <larryhsiao@larryhsiao.com>"]
edition = "2018"
license = "MIT"
description = "A tool to tag and search files."
readme = "readme.md"
homepage = "https://github.com/LarryHsiao/carpo_rs"
repository = "https://github.com/LarryHsiao/carpo_rs"
keywords = ["cli", "search", "file"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.42"
rusqlite = { version = "0.20.0", features = ["bundled"]}
dirs = "2.0"
tempfile = "3"
sciter-rs = "0.5.46"
open = "1.3.2"
mime = "0.3.14"

[profile.release]
panic = 'abort'